--- a/momentum/css/styles.css
+++ b/momentum/css/styles.css
@@ -1,3 +1,54 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
+@import "variable.css";
+
+/* components */
+@import "components/greetings.css";
+@import "components/todo.css";
+
+body {
+  font-family: "Merriweather", serif;
+  color: aliceblue;
+}
+
 .hidden {
   display: none;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+}
+
+.background-image {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 98vh;
+  opacity: 0.8;
+  z-index: -1;
+}
+
+#clock {
+  margin: 0;
+  margin-top: 30vh;
+  text-align: center;
+  font-size: 96px;
+}
+
+#quote {
+  position: absolute;
+  bottom: 20px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#weather {
+  position: absolute;
+  top: 20px;
+  width: 95vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
