Design: Edit Design
- 날씨 정보 출력 시, 상태에 따른 아이콘 이미지를 추가
(When outputting weather information, a image of an icon
according to the weather condition was added.)
- to-do list에 내용 추가 시에, 해당 출력 부분 높이를 벗어나면
scroll이 될 수 있도록 수정
(When adding content to the to-do list, it was modified so
that it could be scrolled out of the corresponding output
part height.)

--- a/momentum/css/components/todo.css
+++ b/momentum/css/components/todo.css
@@ -20,16 +20,31 @@
   text-align: center;
 }
 
-#todo-list {
+.todo-navigation {
   background-color: rgba(131, 131, 131, 0.856);
   border: 1px gray solid;
   border-radius: 20px;
+  height: 35vh;
+  margin-top: 40px;
+}
+
+#todo-list {
   padding: 0px 20px;
-  height: 40vh;
+  margin: 0;
+  height: 25vh;
   list-style: none;
   overflow-y: scroll;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+.todo-list__title {
+  position: sticky;
+  display: block;
+  width: inherit;
+  text-align: center;
+  font-size: 32px;
+  margin: 20px 0 30px 0;
 }
 
 #todo-list::-webkit-scrollbar {
