Design: edit Page
- 글씨 색상 변경
(Change font color)
- 배경 이미지 파일 일부 변경
(Change some background image files)
- 화면 크기에 맞게 내부 요소의 크기 및 비율이 달라지도록 적용
(Applies the size and proportion of internal elements
to match the screen size)

--- a/momentum/css/components/todo.css
+++ b/momentum/css/components/todo.css
@@ -24,8 +24,9 @@
   background-color: rgba(131, 131, 131, 0.856);
   border: 1px gray solid;
   border-radius: 20px;
+  width: 75vw;
   height: 35vh;
-  margin-top: 40px;
+  margin: 1vh 10vw;
 }
 
 #todo-list {
@@ -38,7 +39,7 @@
   scrollbar-width: none; /* Firefox */
 }
 
-.todo-list__title {
+.todo-navigation__title {
   position: sticky;
   display: block;
   width: inherit;
@@ -70,4 +71,13 @@
 
 .todo-list__button:hover {
   color: rgba(13, 211, 40, 0.918);
+}
+
+@media screen and (max-width: 541px) {
+  #todo-form input {
+    width: 250px;
+  }
+  #todo-list {
+    font-size: 18px;
+  }
 }
