--- a/momentum/css/components/greetings.css
+++ b/momentum/css/components/greetings.css
@@ -10,9 +10,10 @@
   outline: none;
   background-color: var(--invisible);
   margin: 10px 0px 30px 0px;
-  width: 400px;
+  width: 50vw;
   font-size: 24px;
   color: aliceblue;
+  text-align: center;
 }
 
 .login-form input::placeholder {
@@ -27,6 +28,7 @@
   width: 200px;
   padding: 5px 40px;
   color: aliceblue;
+  text-shadow: var(--font-shadow);
   border-color: aliceblue;
   border-radius: 20px;
   background-color: var(--invisible);
