--- a/momentum/css/styles.css
+++ b/momentum/css/styles.css
@@ -4,10 +4,15 @@
 /* components */
 @import "components/greetings.css";
 @import "components/todo.css";
+@import "components/widgets.css";
 
 body {
   font-family: "Merriweather", serif;
+  text-shadow: var(--font-shadow);
   color: aliceblue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hidden {
@@ -28,27 +33,8 @@ body {
   z-index: -1;
 }
 
-#clock {
-  margin: 0;
-  margin-top: 30vh;
-  text-align: center;
-  font-size: 64px;
-}
-
-#quote {
-  position: absolute;
-  bottom: 60px;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#weather {
-  position: absolute;
-  top: 20px;
-  width: 95vw;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+@media screen and (max-width: 541px) {
+  body {
+    font-size: 12px;
+  }
 }
